# pgw-project

./: .dockerignore  .gitignore  .gitigore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.kanbn/: index.md
.kanbn/tasks/: feat-hmi-ui-компоненты.md  feat-hmi-приложение-qt-qml.md  feat-sqlite-интеграция.md  feat-tcp-протокол-управления.md  feat-Сборщик-статистики.md  fix-dependency-inversion-для-tcp-handler-cdr-writer-database-manager.md  perf-Провести-профилирование-исправить-узкие-места.md  refactor-Изменения-по-принципами-хорошего-тона.md  refactor-Отредактировать-структуру-проекта-в-дирректориях-src-и-include.md  refactor-Провести-изменения-в-соответсвии-с-принципами-dry.md  refactor-Редактирование-программы-в-соответсвии-с-принципами-solid.md  test-integration-тесты.md  test-unit-тесты.md  todo-Ожидающие-фикса-проблемки.md
app/client/: CMakeLists.txt  main.cpp
app/server/: CMakeLists.txt  main.cpp
configs/: pgw_client.docker.json  pgw_server.docker.json  pgw_server.json
include/: DatabaseManager.h  Socket.h  SocketFactory.h  SocketUtils.h  TcpSocket.h  UdpSocket.h  constants.h  logger.h  types.h  validation.h
include/interfaces/: ISocket.h  ITcpSocket.h  IUdpSocket.h
include/pgw/common/: SocketFactory.h  SocketUtils.h  TcpSerializer.h  TcpSocket.h  UdpSocket.h  constants.h  logger.h  protocol.h  types.h  validation.h
include/pgw/common/interfaces/: ISocket.h  ITcpSocket.h  IUdpSocket.h
include/pgw/server/interfaces/: ICdrWriter.h  IDatabaseManager.h  ISessionManager.h  ITcpHandler.h
pgw_client/: CMakeLists.txt  Config.cpp  main.cpp
pgw_core/: CMakeLists.txt
pgw_core/include/interfaces/: ICdrWriter.h
pgw_core/src/: Config.cpp
pgw_server/: Application.cpp  CMakeLists.txt  CdrWriter.cpp  CdrWriter.h  CdrWriterFactory.cpp  Config.cpp  Config.h  DatabaseCdrWriter.cpp  DatabaseCdrWriter.h  FileCdrWriter.h  HttpServer.cpp  HttpServer.h  Session.h  SessionManager.cpp  SessionManager.h  UdpServer.cpp  UdpServer.h  main.cpp
pgw_server/interfaces/: ICdrWriter.h  ISessionManager.h
src/: CMakeLists.txt  DatabaseManager.cpp  Socket.cpp  SocketFactory.cpp  SocketUtils.cpp  TcpSocket.cpp  UdpSocket.cpp  logger.cpp
src/client/: main.cpp
src/common/: config.cpp  config.h  constants.h  logger.cpp  logger.h  types.h
src/pgw/client/: Client.cpp  Client.h  Config.cpp  Config.h
src/pgw/common/: DatabaseManager.cpp  DatabaseManager.h  DatabaseSink.h  SocketFactory.cpp  SocketUtils.cpp  SocketUtils.h  TcpSerializer.cpp  TcpSerializer.h  TcpSocket.cpp  UdpSocket.cpp  logger.cpp  logger.h
src/pgw/server/: Application.cpp  Application.h  CdrWriterFactory.h  Config.cpp  Config.h  DatabaseCdrWriter.cpp  DatabaseCdrWriter.h  DatabaseManager.cpp  DatabaseManager.h  FileCdrWriter.cpp  FileCdrWriter.h  HttpServer.cpp  HttpServer.h  Server.cpp  Server.h  Session.h  SessionManager.cpp  SessionManager.h  TcpHandler.cpp  TcpHandler.h  TcpServer.cpp  TcpServer.h  UdpServer.cpp  UdpServer.h
src/server/: CdrWriter.cpp  CdrWriter.h  HttpServer.cpp  HttpServer.h  Session.h  SessionManager.cpp  SessionManager.h  Socket.cpp  Socket.h  UdpServer.cpp  UdpServer.h  main.cpp
src/server/interfaces/: ICdrWriter.h  ISession.h  ISessionManager.h  ISocket.h
tests/: CMakeLists.txt  test_config.cpp  test_logger.cpp  test_session_manager.cpp  test_udp_server.cpp
tests/integration/: test_integration.cpp  test_integration_tcp.cpp  test_integration_udp.cpp
tests/load/: test_load_udp.cpp
tests/mocks/: MockCdrWriter.h  MockDatabaseManager.h  MockSessionManager.h  MockSocket.h  MockTcpHandler.h  MockTcpSocket.h  MockUdpSocket.h  logger.h
tests/unit/: test_config.cpp  test_database.cpp  test_database_cdr_writer.cpp  test_logger.cpp  test_session_manager.cpp  test_tcp_handler.cpp  test_tcp_serializer.cpp  test_tcp_server.cpp  test_udp_server.cpp
